# CSc-74020

./: Makefile  README.md
data/: dnd-5e-monsters.csv
data/dndcombat.com/: monster-elo-1.json  monster-elo-2.json  monster-elo-3.json
doc/: README.md
src/: Makefile
src/classification/: classifier_specification.py  evaluation_specification.py  featureset_specification.py  illustrate_specification.py  model_AdaBoost.py  model_DecisionTree.py  model_GradientBoost.py  model_KNN.py  model_LogisticRegression.py  model_NaiveBayes.py  model_NeuralNetwork.py  model_NeuralNetworkMLP.py  model_NeuralNetworkRBM.py  model_RandomForest.py  model_SVM.py
src/curation/: Makefile  cabal.project  curate-json.cabal
src/curation/app/: Main.hs  Parameters.hs
src/curation/app/Monster/: Elo.hs  Label.hs  StatBlock.hs
src/curation/doc/: README.md
tex/: CR-Morphisms.tex  CR-Ranges.tex  Makefile  nips_2017.sty  proposal.tex  references.bib  report.tex
